# text-2-Brainrot

./: .gitignore  README.md  download_model.py  main.py  pyproject.toml
data/synthetic/: data.csv
notebooks/: train.ipynb
src/preprocessing/: csv_to_natural.py  generate_data.py
