[project]
name = "text-2-brainrot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-google-genai>=4.2.1",
    "numpy>=2.4.4",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.12.0",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
]
